--- a/FIND-E/app/build.gradle
+++ b/FIND-E/app/build.gradle
@@ -54,5 +54,9 @@ dependencies {
     compile ('com.mapbox.mapboxsdk:mapbox-android-sdk:4.1.0@aar'){
         transitive=true
     }
+    compile ('com.mapbox.mapboxsdk:mapbox-android-directions:1.0.0@aar'){
+        transitive=true
+    }
     compile 'com.eightbitlab:blurview:1.1.0'
+    compile 'jp.wasabeef:blurry:2.0.2'
 }
