--- a/FIND-E/app/src/main/AndroidManifest.xml
+++ b/FIND-E/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <uses-feature
         android:name="android.hardware.bluetooth_le"
@@ -37,7 +39,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".services.impl.BluetoothLeService"
+            android:enabled="true" />
         <service android:name="com.mapbox.mapboxsdk.telemetry.TelemetryService" />
+
         <receiver
             android:name=".receiver.BluetoothStateReceiver"
             android:enabled="true">
