--- a/FIND-E/app/src/main/AndroidManifest.xml
+++ b/FIND-E/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <uses-feature
         android:name="android.hardware.bluetooth_le"
@@ -30,23 +33,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!--<activity-->
-            <!--android:name=".ui.main.StartActivity"-->
-            <!--android:screenOrientation="portrait"-->
-            <!--android:theme="@style/AppThemeDark">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
-
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        <!--</activity>-->
-
-        <!--<activity-->
-            <!--android:name=".ui.main.MainActivity"-->
-            <!--android:screenOrientation="portrait" />-->
-        <!---->
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name=".ui.main.StartActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppThemeDark">
             <intent-filter>
@@ -57,8 +45,23 @@
         </activity>
 
         <activity
-            android:name=".ui.main.StartActivity"
+            android:name=".ui.main.MainActivity"
             android:screenOrientation="portrait" />
+        
+        <!--<activity-->
+        <!--android:name=".ui.main.MainActivity"-->
+        <!--android:screenOrientation="portrait"-->
+        <!--android:theme="@style/AppThemeDark">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="android.intent.action.MAIN" />-->
+
+        <!--<category android:name="android.intent.category.LAUNCHER" />-->
+        <!--</intent-filter>-->
+        <!--</activity>-->
+
+        <!--<activity-->
+        <!--android:name=".ui.main.StartActivity"-->
+        <!--android:screenOrientation="portrait" />-->
 
         <service
             android:name=".services.impl.BluetoothLeService"
