--- a/FIND-E/app/src/main/AndroidManifest.xml
+++ b/FIND-E/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.front" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-feature
         android:name="android.hardware.bluetooth_le"
@@ -33,23 +42,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".ui.main.StartActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppThemeDark">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".ui.main.MainActivity"
-            android:screenOrientation="portrait" />
-        
         <!--<activity-->
-        <!--android:name=".ui.main.MainActivity"-->
+        <!--android:name=".ui.main.StartActivity"-->
         <!--android:screenOrientation="portrait"-->
         <!--android:theme="@style/AppThemeDark">-->
         <!--<intent-filter>-->
@@ -60,8 +54,31 @@
         <!--</activity>-->
 
         <!--<activity-->
-        <!--android:name=".ui.main.StartActivity"-->
-        <!--android:screenOrientation="portrait" />-->
+            <!--android:name=".ui.main.MainActivity"-->
+            <!--android:screenOrientation="portrait" />-->
+
+        <activity
+            android:name=".ui.main.CameraActivity"
+            android:screenOrientation="landscape" />
+
+
+        <!--android:name=".ui.main.MainActivity"-->
+        <!--android:screenOrientation="landscape" />-->
+        <!--<activity-->
+        <activity
+            android:name=".ui.main.MainActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppThemeDark">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ui.main.StartActivity"
+            android:screenOrientation="portrait" />
 
         <service
             android:name=".services.impl.BluetoothLeService"
