--- a/FIND-E/app/src/main/AndroidManifest.xml
+++ b/FIND-E/app/src/main/AndroidManifest.xml
@@ -42,31 +42,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <!--<activity-->
-        <!--android:name=".ui.main.StartActivity"-->
-        <!--android:screenOrientation="portrait"-->
-        <!--android:theme="@style/AppThemeDark">-->
-        <!--<intent-filter>-->
-        <!--<action android:name="android.intent.action.MAIN" />-->
-
-        <!--<category android:name="android.intent.category.LAUNCHER" />-->
-        <!--</intent-filter>-->
-        <!--</activity>-->
-
-        <!--<activity-->
-            <!--android:name=".ui.main.MainActivity"-->
-            <!--android:screenOrientation="portrait" />-->
-
         <activity
-            android:name=".ui.main.CameraActivity"
-            android:screenOrientation="landscape" />
-
-
-        <!--android:name=".ui.main.MainActivity"-->
-        <!--android:screenOrientation="landscape" />-->
-        <!--<activity-->
-        <activity
-            android:name=".ui.main.MainActivity"
+            android:name=".ui.main.StartActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppThemeDark">
             <intent-filter>
@@ -76,9 +53,32 @@
             </intent-filter>
         </activity>
 
+        <!--<activity-->
+        <!--android:name=".ui.main.MainActivity"-->
+        <!--android:screenOrientation="portrait" />-->
+
         <activity
-            android:name=".ui.main.StartActivity"
+            android:name=".ui.main.CameraActivity"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.main.MainActivity"
+            android:screenOrientation="portrait" />
+
+        <!--<activity-->
+            <!--android:name=".ui.main.MainActivity"-->
+            <!--android:screenOrientation="portrait"-->
+            <!--android:theme="@style/AppThemeDark">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
+
+        <!--<activity-->
+            <!--android:name=".ui.main.StartActivity"-->
+            <!--android:screenOrientation="portrait" />-->
 
         <service
             android:name=".services.impl.BluetoothLeService"
